feat(cli): first-class Spring AI and Spring Boot paths
- modeljars coordinates <model> --spring-ai|--spring-boot prints BOMs, the
  Models adapter or starter at the CLI's Models version, the runtime and
  marker, the qualified integrallis.models.* configuration (yaml or
  --config properties), and the bean or adapter code to paste.
- modeljars demo <model> --spring-ai|--spring-boot writes runnable JBang
  programs: ChatClient over ModelsSpringAiChatModel (typed @Tool callbacks
  for tool-qualified models, typed renderers for Needle 2), Spring AI
  embedding and reranking adapters, and a single-file Boot app driven by
  the Models starter's modelsChatModel.
- The chat template mirrors ModelJars.openRuntime's default qualification
  choice; the starter's raw default is never emitted.
- Speech models and hybrids, and Needle 2 under Boot, fail with actionable
  messages. The plain demo stays the default.
- README section and a Java guide note on the site.